--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,8 +10,20 @@ body {
     color: #ffffff;
 }
 
+.header--secondary {
+    font-weight: 300;
+    font-size: 42px;
+    color: #ffffff;
+}
+
+.header--sub-header {
+    font-weight: 300;
+    font-size: 21px;
+    color: gray;
+}
 
 .link--cta {
     font-size: 16px;
     color: aquamarine;
 }
+
